err/prometheus-jenkins-exporter.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prometheus_client'...
Listing './lib/python3.5/site-packages/prometheus_client/bridge'...
Listing './lib/python3.5/site-packages/prometheus_client/twisted'...
Listing './lib/python3.5/site-packages/prometheus_client-0.0.21.egg-info'...
Listing './lib/python3.5/site-packages/prometheus_jenkins_exporter'...
Compiling './lib/python3.5/site-packages/prometheus_jenkins_exporter/exporter.py'...
***   File "./lib/python3.5/site-packages/prometheus_jenkins_exporter/exporter.py", line 22
    self.auth = base64.b64encode(bytearray(f"{self.config['username']}:{self.config['password']}", "UTF-8")).decode("UTF-8")
                                                                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prometheus_jenkins_exporter-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/python_json_logger-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/pythonjsonlogger'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
